source/objects/Sales_Order_Item__c/fields/Extended_Price__c.field-meta.xml
<CustomField>
    <fullName>Extended_Price__c</fullName>
    <label>Extended Price</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>