source/objects/Sales_Order_Item__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <length>40</length>
    <type>Text</type>
</CustomField>