source/objects/Sales_Order_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Order Items</relationshipLabel>
    <relationshipName>R00N40000001jWpbEAE</relationshipName>
    <type>Lookup</type>
</CustomField>