source/objects/Sales_Order_Item__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <length>80</length>
    <type>Text</type>
</CustomField>